// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dialog parse should count what the dialogs hold 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Reading dialogs in <resources>/gamedata (ContainingInstallation)",
    "Swept 2 files in <duration>, 0 unreadable, 0 archived",
    "Dialogs: 4 total, 1 with no phrases, 1 with a priority",
    "Phrases: 8 total, 5 links, 3 final, 1 without text, 0 outside a phrase list",
    "Largest dialog: zat_test_trader_start with 4 phrases",
    "Encodings: UTF-8: 1, windows-1251: 1",
    "Dialog elements: dont_has_info: 1, has_info: 1, init_func: 1, precondition: 1",
    "Phrase elements: action: 1, disable_info: 1, give_info: 1, go_back: 1, has_info: 1, is_final: 3, next: 5, script_text: 1, text: 7",
    "Check 'dialog.schema' is failed with 1 findings",
    "Read 2 files, status: failed",
  ],
}
`;

exports[`dialog parse should fail under strict when a file is off schema 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Check failed: 1 finding(s)",
  ],
  "stdout": [
    "Reading dialogs in <resources>/gamedata (ContainingInstallation)",
    "Swept 2 files in <duration>, 0 unreadable, 0 archived",
    "Dialogs: 4 total, 1 with no phrases, 1 with a priority",
    "Phrases: 8 total, 5 links, 3 final, 1 without text, 0 outside a phrase list",
    "Largest dialog: zat_test_trader_start with 4 phrases",
    "Encodings: UTF-8: 1, windows-1251: 1",
    "Dialog elements: dont_has_info: 1, has_info: 1, init_func: 1, precondition: 1",
    "Phrase elements: action: 1, disable_info: 1, give_info: 1, go_back: 1, has_info: 1, is_final: 3, next: 5, script_text: 1, text: 7",
    "Check 'dialog.schema' is failed with 1 findings",
  ],
}
`;

exports[`dialog parse should name each finding under verbose output 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Reading dialogs in <resources>/gamedata (ContainingInstallation)",
    "Swept 2 files in <duration>, 0 unreadable, 0 archived",
    "Dialogs: 4 total, 1 with no phrases, 1 with a priority",
    "Phrases: 8 total, 5 links, 3 final, 1 without text, 0 outside a phrase list",
    "Largest dialog: zat_test_trader_start with 4 phrases",
    "Encodings: UTF-8: 1, windows-1251: 1",
    "Dialog elements: dont_has_info: 1, has_info: 1, init_func: 1, precondition: 1",
    "Phrase elements: action: 1, disable_info: 1, give_info: 1, go_back: 1, has_info: 1, is_final: 3, next: 5, script_text: 1, text: 7",
    "Check 'dialog.schema' is failed with 1 findings",
    "  [dialog.unknown-element] configs\\gameplay\\dialogs_zaton.xml: zat_b30_test_owl_about_stash#1: unknown element 'go_back'",
    "Read 2 files, status: failed",
  ],
}
`;

exports[`dialog parse should refuse a prefix holding no dialogs 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Verify error: No dialog files were read under <resources>/gamedata, status: skipped",
  ],
  "stdout": [
    "Reading dialogs in <resources>/gamedata (ContainingInstallation)",
    "Swept 0 files in <duration>, 0 unreadable, 0 archived",
    "Dialogs: 0 total, 0 with no phrases, 0 with a priority",
    "Phrases: 0 total, 0 links, 0 final, 0 without text, 0 outside a phrase list",
    "Encodings:",
    "Dialog elements:",
    "Phrase elements:",
  ],
}
`;

exports[`dialog parse should report the census and checks it found 1`] = `
{
  "command": [
    "dialog",
    "parse",
  ],
  "duration": "<duration>",
  "error": null,
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "checks": [
      {
        "duration": "<duration>",
        "findings": [],
        "id": "dialog.read",
        "status": "passed",
      },
      {
        "duration": "<duration>",
        "findings": [
          {
            "message": "zat_b30_test_owl_about_stash#1: unknown element 'go_back'",
            "ruleId": "dialog.unknown-element",
            "subject": "configs\\gameplay\\dialogs_zaton.xml",
          },
        ],
        "id": "dialog.schema",
        "status": "failed",
      },
    ],
    "status": "failed",
  },
}
`;

exports[`dialog parse should report the failure even when silenced 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Check failed: 1 finding(s)",
  ],
  "stdout": [],
}
`;

exports[`dialog parse should say nothing when silenced 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [],
}
`;

exports[`dialog parse should write a structured report 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Reading dialogs in <resources>/gamedata (ContainingInstallation)",
    "Swept 2 files in <duration>, 0 unreadable, 0 archived",
    "Dialogs: 4 total, 1 with no phrases, 1 with a priority",
    "Phrases: 8 total, 5 links, 3 final, 1 without text, 0 outside a phrase list",
    "Largest dialog: zat_test_trader_start with 4 phrases",
    "Encodings: UTF-8: 1, windows-1251: 1",
    "Dialog elements: dont_has_info: 1, has_info: 1, init_func: 1, precondition: 1",
    "Phrase elements: action: 1, disable_info: 1, give_info: 1, go_back: 1, has_info: 1, is_final: 3, next: 5, script_text: 1, text: 7",
    "Check 'dialog.schema' is failed with 1 findings",
    "Read 2 files, status: failed",
  ],
}
`;

exports[`dialog parse should write only the report 1`] = `
[
  {
    "path": "report.json",
    "sha256": "ae4bae1159f5133fef9b9f03d06dd01cd3a86ae18a524bc8cf732579f0c088cd",
    "size": 689,
  },
]
`;
